# bachelorsthesis

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: algorithm.hpp  edge_extension.hpp  logger.hpp  pch.hpp
include/core/: algorithm.hpp  arrangement.hpp  edge_extension.hpp  edge_relink.hpp  graph.hpp  max_flow.hpp  pre_process.hpp  preprocess.hpp  subdivision.hpp  substitute_edges.hpp
include/cxxopts/: cxxopts.hpp
include/io/: chrono_io.hpp  cl_parser.hpp  io_functions.hpp
include/utils/: logger.hpp  metric.hpp  metric_simplification.hpp  pch.hpp
src/: algo_geometry.cpp  algorithm.cpp  arrangement.cpp  edge_extension.cpp  graphbuild.cpp  io_functions.cpp  logger.cpp  main.cpp
src/arrangement/: handle_datastructures.cpp  normal_arrangement.cpp
src/core/: algorithm.cpp  arrangement.cpp  edge_extension.cpp  edge_relink.cpp  graph.cpp  max_flow.cpp  pre_process.cpp  preprocess.cpp  subdivision.cpp  substitute_edges.cpp
src/geometry/: geometric_helpers.cpp  normal_extension.cpp  threshold_extension.cpp
src/graph/: buildgraph.cpp  max_flow.cpp
src/input_output/: io_functions.cpp
src/io/: chrono_io.cpp  cl_parser.cpp  io_functions.cpp
src/utils/: logger.cpp  metric.cpp  metric_simplification.cpp
